# pythonlings

./: LICENSE  LICENSE.rustlings  README.md  info.yml  setup.cfg
exercises/variables/: test.py  variables0.py  variables1.py
src/: exercise.py  main.py  run.py  watch.py
