[metadata]
name = pythonlings
version = 0.0.1
author = Tony Crane
author_email= tonycrane@foxmail.com
description = Pythonlings is a collection of small exercises to get you used to writing and reading Python code
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/TonyCrane/pythonlings
license = MIT

[options]
packages = src
include_package_data=True
install_requires = 
    pyyaml
    watchdog

[options.entry_points]
console_scripts =
    pythonlings = src.main:main
